# lithAssetCompiler

./: .gitignore  LICENSE  meson.build
include/: asset.h  asset_metadata.h  asset_package.h  asset_serializer.h  fixed_byte_array.h  serialized_asset.h  uuid.h
include/assets/: enums.h  font.h  image.h  shader.h  shader_spirv.h
src/: asset_package.cpp  asset_serializer.cpp  loaders.h  main.cpp
src/loaders/: font_loader.cpp  image_loader.cpp  shader_spirv_loader.cpp
src/util/: load_file.h
subprojects_src/msdf-atlas-gen/: meson.build
subprojects_src/msdf-atlas-gen/msdf-atlas-gen/: Charset.cpp  Charset.h  DynamicAtlas.hpp  FontGeometry.cpp  rectangle-packing.hpp
